--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
 	},
 	"module": "src/index.js",
 	"dependencies": {
-		"@servicenow/ui-core": "quebec",
-		"@servicenow/ui-renderer-snabbdom": "quebec",
 		"@servicenow/cli-archetype": "22.0.0",
 		"@servicenow/cli-component-archetype": "22.0.0",
-		"@servicenow/sass-theme": "quebec",
+		"@servicenow/library-translate": "quebec",
+		"@servicenow/now-button": "^19.8.2-ecd",
+		"@servicenow/now-toggle": "^19.8.2-ecd",
 		"@servicenow/sass-kit": "quebec",
-		"@servicenow/library-translate": "quebec"
+		"@servicenow/sass-theme": "quebec",
+		"@servicenow/ui-core": "quebec",
+		"@servicenow/ui-renderer-snabbdom": "quebec"
 	},
 	"devDependencies": {
 		"@servicenow/cli-archetype-dev": "22.0.0",
